Working on redrawing jira count data table

--- a/ceeq/apps/queries/templates/queries/project_detail/project_detail.html
+++ b/ceeq/apps/queries/templates/queries/project_detail/project_detail.html
@@ -204,22 +204,26 @@
             $('#ceeq_trend_chart_include_uat').hide();
             $('#component_percentage_pie_chart_include_uat').hide();
             $('#export_data_include_uat').hide();
+            $('#subcomponent_jira_data_table_include_uat').hide();
             $('#qei_log_include_uat').show();
         }
         if (data_exclude_uat[3] == 103 ) {
             $('#ceeq_trend_chart_exclude_uat').hide();
             $('#component_percentage_pie_chart_exclude_uat').hide();
             $('#export_data_exclude_uat').hide();
+            $('#subcomponent_jira_data_table_exclude_uat').hide();
             $('#qei_log_exclude_uat').show();
         }
         if (data_only_uat[3] == 103 ) {
             $('#component_percentage_pie_chart_only_uat').hide();
             $('#export_data_only_uat').hide();
+            $('#subcomponent_jira_data_table_only_uat').hide();
             $('#qei_log_only_uat').show();
         }
         if (data_custom[3] == 103 ) {
             $('#component_percentage_pie_chart_custom').hide();
             $('#export_data_custom').hide();
+            $('#subcomponent_jira_data_table_custom').hide();
             $('#qei_log_custom').show();
         }
 
