--- a/ceeq/apps/queries/templates/queries/project_detail/project_detail_only_uat.html
+++ b/ceeq/apps/queries/templates/queries/project_detail/project_detail_only_uat.html
@@ -6,6 +6,8 @@
     </div>
 </div>
 
+<div id="subcomponent_jira_data_table_only_uat" style="width: 700px; height: 600px; margin: 0 auto;"></div>
+
 <div id="qei_log_only_uat" style="width: 500px; height: 300px; margin: 0 auto;" hidden></div>
 
 {% if project.uat_score == 103 %}
