--- a/ceeq/apps/queries/templates/queries/project_detail/project_detail_custom.html
+++ b/ceeq/apps/queries/templates/queries/project_detail/project_detail_custom.html
@@ -31,6 +31,8 @@
         </div>
     </div>
 
+    <div id="subcomponent_jira_data_table_custom" style="width: 700px; height: 600px; margin: 0 auto;"></div>
+
     <div id="qei_log_custom" style="width: 500px; height: 300px; margin: 0 auto;" hidden></div>
 
     {% if weight_factor_custom %}
