Add selection for choosing grahps to export

--- a/ceeq/apps/queries/templates/queries/project_detail/project_detail.html
+++ b/ceeq/apps/queries/templates/queries/project_detail/project_detail.html
@@ -4,6 +4,9 @@
 
 {% block extrahead %}
     <link href="{% static 'common/bootstrap-daterangepicker/1.2/daterangepicker-bs3.css' %}" rel="stylesheet" type="text/css">
+
+    <link href="{% static 'common/bootstrap-toggle/2.2.0/css/bootstrap-toggle.min.css' %}" rel="stylesheet">
+
     <style type="text/css">
         .query-field {
             background: #ffffff;
@@ -178,6 +181,8 @@
     <script type='text/javascript' src="{% static 'common/bootstrap-daterangepicker/1.2/moment.min.js' %}"></script>
     <script type='text/javascript' src="{% static 'common/momentjs/tz/0.2.4/moment-timezone-with-data-2010-2020.js' %}"></script>
     <script type='text/javascript' src="{% static 'common/bootstrap-daterangepicker/1.2/daterangepicker.js' %}"></script>
+    <script type='text/javascript' src="{% static 'common/bootstrap-toggle/2.2.0/js/bootstrap-toggle.min.js' %}"></script>
+
 {#    <script type='text/javascript' src="{% static 'common/momentjs/moment.js' %}"></script>#}
 
 {#    <script src="http://highcharts.github.io/export-csv/export-csv.js"></script>#}
