Update the order of members of project etc.

--- a/ceeq/apps/queries/templates/queries/projects/projects.html
+++ b/ceeq/apps/queries/templates/queries/projects/projects.html
@@ -188,7 +188,7 @@
                 </table>
             </div>
         {% else %}
-            <small><i class="fa fa-pencil"></i> Create a <a href="{% url 'queries:project_new' %}"> New Project </a>
+            <small><i class="fa fa-pencil"></i> Create a <a href="#" data-toggle="modal" data-target="#project-new-modal"> New Project </a>
             </small>
             <p>No projects available</p>
         {% endif %}
