Make new project from similar one prettier

--- a/ceeq/apps/queries/templates/queries/project_detail/projects_detail_modal.html
+++ b/ceeq/apps/queries/templates/queries/project_detail/projects_detail_modal.html
@@ -8,7 +8,7 @@
                     <h4 class="modal-title">Project New Information</h4>
                 </div>
                 <div class="modal-body">
-                    {{ form }}
+                    {{ form_new }}
                     <br>
                     <div class="row">
                         <div class="col-xs-12">
