--- a/ceeq/apps/queries/templates/queries/projects/projects_start.html
+++ b/ceeq/apps/queries/templates/queries/projects/projects_start.html
@@ -35,5 +35,6 @@
 {% block footer %}
     <script>
         {% include 'queries/projects/project.js' %}
+        {% include 'queries/projects/project_new.js' %}
     </script>
 {% endblock %}
